fixed items jumping around, update it so the overlord gets mad if you don't serve the right thing

--- a/basic-bp/css/gamescreen.css
+++ b/basic-bp/css/gamescreen.css
@@ -47,6 +47,42 @@
 	height:70px;
 }
 
+.burner {
+	width:80px;
+	height:80px;
+	background-color:#666;
+	border-radius:40px;
+	display:inline-block;
+	margin: 10px;
+}
+
+.ring {
+	background-color:#666;	
+	border:2px solid red;
+}
+
+.ring.outer {
+	width:50px;
+	height:50px;
+	margin: 0 auto;
+	margin-top:15px;
+	border-radius: 25px;
+}
+
+.ring.inner {
+	width:30px;
+	height:30px;
+	margin: 0 auto;
+	margin-top:7px;
+	border-radius: 15px;
+}
+
+.burnerContainer {
+	width:220px;
+	margin:0 auto;
+}
+
+
 #recipeName {
 	width: 30%;
 	height: 100%;
